k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: oficina
  labels:
    app: api
    app.kubernetes.io/part-of: fiap-fase3
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
